commite 1